[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[build-dependencies]
slint-build = "0.2.4"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "0.2.4"
biser = { path = "../biser" }

#[profile.dev.build-override]
#opt-level = 2

#[features]
##default = ["jack"]
##jack=[]

