[package]
name = "yams_main"
version = "0.1.0"
edition = "2021"

#[build-dependencies]
#slint-build = "0.2.4"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#slint = "0.2.4"
yams_engine = { path = "../yams_engine" }
yams_default_modules = { path = "../yams_default_modules" }

#[profile.dev.build-override]
#opt-level = 2

#[features]
##default = ["jack"]
##jack=[]

