[package]
name = "yams_main"
version = "0.1.0"
edition = "2021"

#[build-dependencies]
#slint-build = "0.2.4"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yams_server = { path = "../yams_server" }
yams_default_modules = { path = "../yams_default_modules" }
once_cell = "1.17.0"

steel-core ={ git = "https://github.com/mattwparas/steel" }
steel-derive = { git = "https://github.com/mattwparas/steel" }
steel-repl ={ git = "https://github.com/mattwparas/steel" }
steel-doc ={ git = "https://github.com/mattwparas/steel" }
cargo-steel-lib ={ git = "https://github.com/mattwparas/steel" }
env_logger ={ version = "*" }
log = "0.4.17"
clap = { version = "*", features = ["derive"] }
#steel-doc = { version = "*" }

#[profile.dev.build-override]
#opt-level = 2

#[features]
##default = ["jack"]
##jack=[]

